--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wavefront_exp"
+name = "benchmark_obj"
 version = "0.1.0"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 edition = "2018"
@@ -14,6 +14,7 @@ debug = true
 
 [dev-dependencies]
 criterion = "0.3.2"
+wavefront_obj = "7.0.0"
 
 [[bench]]
 name = "benchmark_test_1"
