--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,19 +10,15 @@ edition = "2018"
 debug = true
 
 [dependencies]
-
+wavefront_obj = { git = "https://github.com/lambdaxymox/wavefront-obj" }
+piston_obj = { version = "7.0.0", git = "https://github.com/lambdaxymox/piston_obj" }
 
 [dev-dependencies]
 criterion = "0.3.2"
-wavefront_obj = "7.0.0"
 
 
 [[bench]]
-name = "benchmark_teapot_1"
-harness = false
-
-[[bench]]
-name = "benchmark_teapot_2"
+name = "benchmark_teapot"
 harness = false
 
 [[bench]]
